[project]
name = "x402-a2a"
version = "1.0.0"
description = "Official x402 payment protocol extension for A2A"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Coinbase Developer Platform", email = "x402@coinbase.com" },
    { name = "Google A2A", email = "a2a@google.com" }
]
requires-python = ">=3.11"
keywords = ["a2a", "x402", "payments", "ethereum", "coinbase", "google"]
dependencies = [
    "a2a-sdk",  # For A2A protocol integration
    "x402>=0.2.0",  # For x402 payment protocol
    "eth-account>=0.13.7",  # For Ethereum account management
    "httpx>=0.28.1",  # For async HTTP client
    "pydantic>=2.0.0",  # For data validation
    "pytest>=8.4.1",  # For testing
    "pytest-asyncio>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "trio>=0.22.0",
]

[project.scripts]
test = "pytest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "__init__.py" = "x402_a2a/__init__.py", "core" = "x402_a2a/core", "executors" = "x402_a2a/executors", "types" = "x402_a2a/types", "extension.py" = "x402_a2a/extension.py" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "async: Async tests"
]








